@@ -1,0 +1,65 @@
+package org.red5.compatibility.flex.messaging.io;
+
+/*
+ * RED5 Open Source Flash Server - http://www.osflash.org/red5
+ *
+ * Copyright (c) 2006-2007 by respective authors (see below). All rights reserved.
+ *
+ * This library is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU Lesser General Public License as published by the Free Software
+ * Foundation; either version 2.1 of the License, or (at your option) any later
+ * version.
+ *
+ * This library is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+ * PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License along
+ * with this library; if not, write to the Free Software Foundation, Inc.,
+ * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+ */
+
+import java.util.Map;
+
+import org.red5.io.amf3.IDataInput;
+import org.red5.io.amf3.IDataOutput;
+import org.red5.io.amf3.IExternalizable;
+
+/**
+ * Flex <code>ObjectProxy</code> compatibility class.
+ * 
+ * @author The Red5 Project (red5@osflash.org)
+ * @author Joachim Bauch (jojo@struktur.de)
+ */
+public class ObjectProxy implements IExternalizable {
+
+	/** The proxied object. */
+	private Map item;
+	
+	/** Create new empty proxy. */
+	public ObjectProxy() {
+		this(null);
+	}
+	
+	/**
+	 * Create proxy for given object.
+	 * 
+	 * @param item object to proxy
+	 */
+	public ObjectProxy(Map item) {
+		this.item = item;
+	}
+
+	/** {@inheritDoc} */
+	public void readExternal(IDataInput input) {
+		item = (Map) input.readObject();
+	}
+
+	/** {@inheritDoc} */
+	public void writeExternal(IDataOutput output) {
+		output.writeObject(item);
+	}
+
+	// TODO: implement other ObjectProxy methods
+	
+}
